[package]
name = "ccatoken"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/veraison/rust-ccatoken"
license = "Apache-2.0"
description = "CCA attestation token decoding, verification, and appraisal"
keywords = [ "Arm", "CCA", "attestation" ]
categories = [ "cryptography", "parser implementations" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2.0"
multimap = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
hex = "0.4"
thiserror = "1"
hex-literal = "0.4.1"
bitmask = "0.5.0"
serde_with = { version = "3.4.0", features = ["hex"] }
jsonwebkey = "0.3.5"
cose-rust = "0.1.7"
