[package]
name = "ccatoken"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/veraison/rust-ccatoken"
license = "Apache-2.0"
description = "CCA attestation token decoding, verification, and appraisal"
keywords = [ "Arm", "CCA", "attestation" ]
categories = [ "cryptography", "parser implementations" ]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
ciborium = "0.2.2"
multimap = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
hex = { version = "0.4", features = ["serde"] }
thiserror = "1"
hex-literal = "0.4.1"
bitmask = "0.5.0"
serde_with = { version = "3.14.0", features = ["hex"] }
jsonwebtoken = "9.1.0"
cose-rust = "0.1.7"
ear = "0.4.0"
clap = { version = "4.4.10", features = ["derive"] }
openssl = "0.10.34"
